@@ -1,3 +1,6 @@
+2005-11-11  Jeremy Cribb <jcribb@email.unc.edu>
+	* shear_wave_MCL_controller.m: added.  extended version of oscillator that does additional testing types- constant velocity thus far.  more waveforms forthcoming....
+
 2005-11-02  Kalpit Desai <kvdesai@email.unc.edu>
 	* shear_wave_MCL_oscillator.m: Fixed the bug where stage would go to and come back before each session of data-acquisition.
 2005-09-16  Jeremy Cribb <jcribb@email.unc.edu>
